--- a/src/Sophon.Web/Views/Shared/_Layout.cshtml
+++ b/src/Sophon.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Log" asp-action="Index">Logs</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" href="/hangfire" target="_blank">Hangfire</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -36,7 +39,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
