--- a/src/Sophon.Web/Views/Shared/_Layout.cshtml
+++ b/src/Sophon.Web/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @*<script src="~/plugins/layer-v3.1.1/layer.js"></script>*@
     <script src="~/plugins/layui/v2.5.6/layui.all.js"></script>
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
