--- a/src/Sophon.Web/Views/Home/Index.cshtml
+++ b/src/Sophon.Web/Views/Home/Index.cshtml
@@ -19,6 +19,30 @@
 </div>
 
 
+<div class="row">&nbsp;</div>
+<div class="row">
+    <div class="col-2">User</div>
+    <div class="col-4"><input type="text" id="userInput" /></div>
+</div>
+<div class="row">
+    <div class="col-2">Message</div>
+    <div class="col-4"><input type="text" id="messageInput" /></div>
+</div>
+<div class="row">&nbsp;</div>
+<div class="row">
+    <div class="col-6">
+        <input type="button" id="sendButton" value="Send Message" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <ul id="messagesList"></ul>
+    </div>
+</div>
+
+
+
 
 @section Scripts{
     <script src="~/lib/echarts/dist/echarts.min.js"></script>
@@ -28,6 +52,7 @@
             initAssetRecords();
             initLogChart();
             initLogChart2();
+            hubMessage();
         });
         function init() {
             // 基于准备好的dom，初始化echarts实例
@@ -317,6 +342,39 @@
                     alert(XMLHttpRequest.responseText);
 
                 }
+            });
+        }
+
+        function hubMessage() {
+            //var connection = new signalR.HubConnectionBuilder().withUrl("/testHub").build();
+            var connection = new signalR.HubConnectionBuilder().withUrl("/notificationHub").build();
+
+            //Disable send button until connection is established
+            document.getElementById("sendButton").disabled = true;
+
+            //connection.on("ReceiveMessage", function (message) {
+            connection.on("Notify", function (message) {
+                //var msg = message.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
+                //var encodedMsg = msg;
+                var li = document.createElement("li");
+                //li.textContent = encodedMsg;
+                li.textContent = message;
+                document.getElementById("messagesList").appendChild(li);
+            });
+
+            connection.start().then(function () {
+                document.getElementById("sendButton").disabled = false;
+            }).catch(function (err) {
+                return console.error(err.toString());
+            });
+
+            document.getElementById("sendButton").addEventListener("click", function (event) {
+                //var user = document.getElementById("userInput").value;
+                var message = document.getElementById("messageInput").value;
+                connection.invoke("PushMessage", message).catch(function (err) {
+                    return console.error(err.toString());
+                });
+                event.preventDefault();
             });
         }
     </script>
