--- a/src/Sophon.Web/Views/Shared/_Layout.cshtml
+++ b/src/Sophon.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Sophon.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/plugins/layui/v2.5.6/css/layui.css" />
+    <link rel="stylesheet" href="~/lib/toastr/build/toastr.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -55,6 +56,7 @@
     @*<script src="~/plugins/layer-v3.1.1/layer.js"></script>*@
     <script src="~/plugins/layui/v2.5.6/layui.all.js"></script>
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script src="~/lib/toastr/build/toastr.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
